# zeta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  app.py  profil-README.md  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
.opencode/plans/: control-surfaces.md  ste-tapered-wing.md
backend/: airfoil.py  analysis.py  geometry.py  stability.py
database/: schema.sql  seed.py
scripts/: bump_version.py
static/css/: style.css
static/js/: app.js  charts.js  stlexport.js  viewer3d.js
templates/: index.html
tests/: conftest.py  test_airfoil.py  test_analysis.py  test_app.py  test_geometry.py  test_stability.py
zeta_aircraft_designer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
